--- a/.github/workflows/deployToS3.yml
+++ b/.github/workflows/deployToS3.yml
@@ -14,8 +14,8 @@ jobs:
       with:
         args: --acl public-read --follow-symlinks --delete
       env:
-        AWS_S3_BUCKET: my-first-static-website-hosting1
-        AWS_ACCESS_KEY_ID: AKIAWF5PWDYOIOWMT5W6
-        AWS_SECRET_ACCESS_KEY: 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
+        AWS_S3_BUCKET: ${{ AWS_S3_BUCKET }}
+        AWS_ACCESS_KEY_ID: ${{ AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'ap-south-1'   # optional: defaults to us-east-1
         
